# sphere-meshes

./: .gitignore  CMakeLists.txt  DeformedMesh.cpp  DeformedMesh.h  DirectionalWidth.cpp  DirectionalWidth.h  README.md  SQEM.h  SQEM_bundle.cpp  SQEM_bundle.h  SphereMeshes.cpp  SphereMeshes.h  bar.geo  bar.tobj  bar1.tobj  bindings.cpp  cap.tobj  config.json  config_tile.json  geo.py  main.cpp  normali.ipynb  setup.py  sphere-meshes.cpp  sphere_cloud.cpp  test.py  tet2surface.py  tile.cpp  tobj.py
data/: eigenvalues.npy  test.ply
sqem.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_normal.cpp
